--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">What is Sumunara?</a>
+                        <a class="nav-link" href="login.html">Log in</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign up</a>
+                        <a class="nav-link" href="signup.html">Sign up</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Log in</a>
+                        <a class="nav-link" href="#">Log out</a>
                     </li>
                 </ul>
             </div>
