--- a/error.html
+++ b/error.html
@@ -40,15 +40,15 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">What is Sumunara?</a>
+                        <a class="nav-link" href="login.html">Log in</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign up</a>
+                        <a class="nav-link" href="signup.html">Sign up</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Log in</a>
+                        <a class="nav-link" href="#">Log out</a>
                     </li>
                 </ul>
             </div>
@@ -57,39 +57,16 @@
     <!-- Navbar -->
 
     <!-- Error -->
-    <!-- <section id="error-container" class="container">
-        <div>
-            <h1 id="error-title" class="text-center mb-5">
-                Error
-            </h1>
-        </div>
-    </section> -->
-
-    <!-- option 1 -->
-    <section id="error-container" class="error-container">
+    <section id="error-container">
         <span class="four"><span class="screen-reader-text">4</span></span>
         <span class="zero"><span class="screen-reader-text">0</span></span>
         <span class="four"><span class="screen-reader-text">4</span></span>
         <p class="zoom-area"><b>Oops!</b> The page you're looging for doesn't exist.</p>
     </section>
-    <div class="link-container">
+
+    <div id="link-container">
         <a href="index.html" class="more-link">Go home</a>
     </div>
-    <!-- option 1 -->
-
-    <!-- option 2 -->
-    <!-- <h1>404 Error Page #3</h1>
-    <p class="zoom-area"><b>CSS</b> animations to make a cool 404 page. </p>
-    <section class="error-container">
-        <span>4</span>
-        <span><span class="screen-reader-text">0</span></span>
-        <span>4</span>
-    </section>
-    <div class="link-container">
-        <a target="_blank" href="index.html" class="more-link">Go home</a>
-    </div> -->
-    <!-- option 2 -->
-
     <!-- Error -->
 
     <!-- Footer -->
