Add form validation, autocomplete with dummy data, working on signup icons

--- a/details.html
+++ b/details.html
@@ -6,9 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -18,9 +15,6 @@
 
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-
-    <!-- Chart.js -->
-    <!-- <script src="Chart.js"></script> -->
 
     <title>Sumunara | Details</title>
 </head>
@@ -184,7 +178,17 @@
 
                     <li id="noise-area" class="row">
                         <div class="col">
-                            住吉１丁目の騒音レベル：　
+                            騒音レベル（日中）：　
+                        </div>
+
+                        <div class="col-5">
+                            130 dB
+                        </div>
+                    </li>
+
+                    <li id="noise-area" class="row">
+                        <div class="col">
+                            騒音レベル（夜間）：　
                         </div>
 
                         <div class="col-5">
@@ -427,8 +431,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
-    <!-- <script src="js/bootstrap.min.js"></script> -->
 
     <script type="module" src="scripts/main.js"></script>
     <script src="/scripts/charts.js"></script>
