--- a/signup.html
+++ b/signup.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/7b4d01730d.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -58,42 +58,123 @@
 
     <!-- Sign up -->
     <form id="signup-container">
-        <div class="form-group">
-            <label for="inputUserName">Username</label>
+        <h3>Sign up</h3>
 
-            <input type="text" class="form-control" id="inputUserName">
+        <p>Sign up with your social media account</p>
+
+        <div id="social-icons">
+            <button id="google" class="btn">
+                <div class="col-2"><i class="fab fa-google"></i></div>
+
+                <div class="col-10 mx-auto"> Sign up with Google</div>
+            </button>
+
+            <button id="facebook" class="btn">
+                <div class="col-2"><i class="fab fa-facebook-f"></i></div>
+
+                <div class="col-10 mx-auto"> Sign up with Facebook</div>
+            </button>
+
+            <button id="twitter" class="btn">
+                <div class="col-2"><i class="fab fa-twitter"></i></div>
+
+                <div class="col-10 mx-auto"> Sign up with Twitter</div>
+            </button>
+
+            <button id="instagram" class="btn">
+                <div class="col-2"><i class="fab fa-instagram"></i></div>
+
+                <div class="col-10 mx-auto"> Sign up with Instagram</div>
+            </button>
+
+            <button id="github" class="btn">
+                <div class="col-2"><i class="fab fa-github"></i></div>
+
+                <div class="col-10 mx-auto"> Sign up with GitHub</div>
+            </button>
         </div>
 
-        <div class="form-group">
-            <label for="inputEmail">Email</label>
+        <p>Or</p>
 
-            <input type="email" class="form-control" id="inputEmail">
+        <button id="show-form-btn" class="btn" type="button">
+            <i class="far fa-envelope"></i> Sign up with Email
+        </button>
+
+        <div id="form-email">
+            <div class="form-group">
+                <label for="inputUserName">Username</label>
+
+                <input type="text" class="form-control" id="inputUserName">
+
+                <div class="invalid-feedback">
+                    Name must be between 2 and 15 characters.
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="inputEmail">Email</label>
+
+                <input type="email" class="form-control" id="inputEmail">
+
+                <div class="invalid-feedback">
+                    Enter a valid email.
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="inputPassword">Password</label>
+
+                <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpBlock">
+
+                <small id="passwordHelpBlock" class="form-text text-muted">
+                    Your password must be longer than 8 characters, contain both upper case and lower case letters, a
+                    number, and
+                    must not contain spaces.
+                </small>
+
+                <div class="invalid-feedback">
+                    Make sure your password is longer than 8 characters, contains both upper case and lower case
+                    letters, a
+                    number,
+                    and
+                    does not contain spaces.
+                </div>
+
+                <!-- <div class="invalid-feedback">
+                Password must be longer than 8 characters.
+            </div>
+
+            <div class="invalid-feedback">
+                Password must contain both upper case and lower case.
+            </div>
+
+            <div class="invalid-feedback">
+                Password must contain a number.
+            </div>
+
+            <div class="invalid-feedback">
+                Password must must not contain spaces.
+            </div> -->
+            </div>
+
+            <div class="form-group">
+                <label for="inputConfirmPassword">Confirm password</label>
+
+                <input type="password" class="form-control" id="inputConfirmPassword">
+
+                <div class="invalid-feedback">
+                    Passwords do not match.
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="form-check-label"><input type="checkbox"> Remember me</label>
+            </div>
+
+            <button type="submit" class="btn btn-warning">Sign up</button>
+
+            <p>By signing up, you agree to our <a href="#">Privacy Policy</a> and <a href="#">Terms of Service</a>.</p>
         </div>
-
-        <div class="form-group">
-            <label for="inputPassword">Password</label>
-
-            <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpBlock">
-
-            <small id="passwordHelpBlock" class="form-text text-muted">
-                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces,
-                special characters, or emoji.
-            </small>
-        </div>
-
-        <div class="form-group">
-            <label for="inputConfirmPassword">Confirm password</label>
-
-            <input type="password" class="form-control" id="inputConfirmPassword">
-        </div>
-
-        <div class="form-group">
-            <label class="form-check-label"><input type="checkbox"> Remember me</label>
-        </div>
-
-        <button type="submit" class="btn btn-warning">Sign up</button>
-
-        <p>By signing up, you agree to our <a href="#">terms and conditions</a>.</p>
     </form>
     <!-- Sign up -->
 
@@ -199,9 +280,8 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <!-- <script src="js/bootstrap.min.js"></script> -->
-
     <script type="module" src="scripts/main.js"></script>
+    <script src="/scripts/validation.js"></script>
 </body>
 
 </html>
