--- a/signup.html
+++ b/signup.html
@@ -62,7 +62,7 @@
 
         <div id="flex-container">
             <!-- Social -->
-            <div>
+            <div class="col">
                 <p class="text-center">Sign up with your social media account</p>
 
                 <div id="social-icons">
@@ -99,16 +99,20 @@
             </div>
             <!-- Social -->
 
-            <p id="or" class="text-center"><span>or</span></p>
+            <div id="divider-wrapper">
+                <p id="or" class="text-center"><span>or</span></p>
+            </div>
 
-            <button id="show-form-btn" class="btn">
-                <i class="far fa-envelope"></i> Sign up with Email
-            </button>
+            <div id="btn-wrapper" class="col">
+                <button id="show-form-btn" class="btn">
+                    <i class="far fa-envelope"></i> Sign up with Email
+                </button>
+            </div>
 
             <!-- Email form -->
-            <form id="signup-form">
+            <form id="signup-form" class="col">
                 <div class="form-group">
-                    <label for="inputUserName">Username</label>
+                    <label for="inputUserName"><i class="fas fa-user mr-2"></i>Username</label>
 
                     <input type="text" class="form-control" id="inputUserName">
 
@@ -118,7 +122,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="inputEmail">Email</label>
+                    <label for="inputEmail"><i class="far fa-envelope mr-2"></i>Email</label>
 
                     <input type="email" class="form-control" id="inputEmail">
 
@@ -128,7 +132,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="inputPassword">Password</label>
+                    <label for="inputPassword"><i class="fas fa-lock mr-2"></i>Password</label>
 
                     <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpBlock">
 
@@ -165,7 +169,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="inputConfirmPassword">Confirm password</label>
+                    <label for="inputConfirmPassword"><i class="fas fa-lock mr-2"></i>Confirm password</label>
 
                     <input type="password" class="form-control" id="inputConfirmPassword">
 
